--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@mui/material": "^5.15.14",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-router-dom": "^6.23.0"
+    "react-router-dom": "^6.23.0",
+    "react-material-ui-carousel": "^3.4.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
